--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "antd": "^4.14.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "react-toast-notifications": "^2.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
