--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
     "react-star-ratings": "^2.3.0",
+    "react-to-pdf": "0.0.13",
     "react-toast-notifications": "^2.4.3",
+    "react-video-thumbnail": "^0.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
