--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.12.1",
     "react-player": "^2.9.0",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
