--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@progress/kendo-drawing": "^1.10.0",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-pdf": "^4.5.0",
+    "@react-pdf/renderer": "^2.0.12",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "@testing-library/jest-dom": "^5.11.4",
