--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.14.0",
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
+    "flat-cache": "^3.0.4",
     "moment": "^2.29.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
@@ -29,7 +30,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
     "react-star-ratings": "^2.3.0",
-    "react-to-pdf": "0.0.13",
+    "react-to-pdf": "0.0.14",
     "react-toast-notifications": "^2.4.3",
     "react-video-thumbnail": "^0.1.3",
     "redux": "^4.0.5",
