--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "browser-image-compression": "^1.0.14",
     "flat-cache": "^3.0.4",
     "moment": "^2.29.1",
+    "pretty-checkbox": "^3.0.3",
+    "pretty-checkbox-react": "^3.2.0",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
