--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@trendyol-js/react-carousel": "^2.0.1",
     "antd": "^4.14.0",
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
@@ -20,8 +21,8 @@
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.2.0",
     "query-string": "^6.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-player": "^2.9.0",
